# plantlab

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  README.md  install.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
docs/: AGENT_PROTOCOL.md  BACKUPS.md  CAMERA_NODE.md  COORDINATOR.md  DASHBOARD_DATA_CONTRACTS.md  DEVELOPMENT.md  DISTRIBUTED_PROJECT_MONITORING.md  HARDWARE_SURFACE_AUDIT.md  HARDWARE_UX_ARCHITECTURE.md  INSTALLATION.md  NODE_CONFIGURATION_CONTROL_PLANE.md  SYSTEMD.md  TROUBLESHOOTING.md
edge-agent/: README.md  install.sh  pyproject.toml  requirements.txt
edge-agent/plantlab_edge_agent/: __init__.py  __main__.py  agent.py  camera.py  camera_inventory.py  config.py  protocol.py  spool.py
edge-agent/plantlab_edge_agent/power/: __init__.py  base.py  dependencies.py  kasa.py  models.py  runtime.py
edge-agent/plantlab_edge_agent/sensors/: __init__.py  base.py  dht22.py  mock.py  probe.py  runtime.py  test_command_runtime.py  test_runner.py  validation.py
edge-agent/systemd/: plantlab-edge-agent.service.template
edge-agent/tests/: conftest.py  test_agent.py  test_camera.py  test_camera_inventory.py  test_cli.py  test_config.py  test_kasa_driver.py  test_power.py  test_power_dependencies.py  test_power_reliability.py  test_protocol.py  test_sensor_test_command.py  test_sensors.py  test_spool.py
prisma/: schema.prisma
scripts/: agent-ingest-upload.sh  agent-service.ts  backup.ts  camera-capture.ts  camera-list.ts  camera-service.ts  camera-watch.ts  dataDoctor.ts  doctor.ts  playwright-dev-server.mjs
src/: instrumentation.ts
tests/: e2e.spec.ts  live-readonly-screenshots.spec.ts  nodeDiagnostics.e2e.spec.ts  nodeHardware.e2e.spec.ts  nodePower.e2e.spec.ts  projectDistributedUI.e2e.spec.ts  remoteCameraConfig.e2e.spec.ts  (+2 more)
(+500 files in other folders)
